objects/Assistance__c.object
<CustomObject>
    <description>Object relating assistance programs to specific individuals impacted by the crisis.</description>
    <fields>
        <fullName>Amount__c</fullName>
        <inlineHelpText>How much monetary assistance is being provided?</inlineHelpText>
        <label>Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Assistance_Program__c</fullName>
        <inlineHelpText>Which program is this particular assistance relating to?</inlineHelpText>
        <label>Assistance Program</label>
        <referenceTo>Assistance_Program__c</referenceTo>
        <relationshipLabel>Assistance Given</relationshipLabel>
        <relationshipName>Assistances</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <inlineHelpText>Describe the assistance being provided</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Person__c</fullName>
        <inlineHelpText>Who is being provided assistance?</inlineHelpText>
        <label>Person</label>
        <referenceTo>Impacted_Person__c</referenceTo>
        <relationshipLabel>Employee Assistance Programs</relationshipLabel>
        <relationshipName>Assistances</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <inlineHelpText>When did the assistance initiate?</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>Assistance</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ASSISTANCE-{000000000}</displayFormat>
        <label>Assistance Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assistances</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>